# nudny-cmd

./: BUILD  CMakeLists.txt
include/nudny/: base.hpp  cmd.hpp
include/nudny/cmd/: cli_parser.hpp
src/: main.cpp
src/base/: base.cpp
src/nudny/cmd/: cli_parser.cpp
test/: CMakeLists.txt
test/include/: nudny_base_test.hpp
test/include/nudny/cmd/: cli_parser_test.hpp
test/src/: nudny_base_test.cpp
